--- a/index.html
+++ b/index.html
@@ -58,12 +58,33 @@
       <button type="button" data-action="increment">+1</button>
     </div>
 
-    <!-- <script src="./task-1.js" type="module"></script> -->
-    <!-- <script src="./task-2.js" type="module"></script> -->
-    <!-- <script src="./task-3.js" type="module"></script> -->
-    <!-- <script src="./task-4.js" type="module"></script> -->
-    <script src="./task-5.js" type="module"></script>
+    <!-- task-5 -->
 
-    <!-- <script src="./task-6.js" type="module"></script> -->
+    <input type="text" placeholder="Ваше имя?" id="name-input" />
+    <
+    <h1>Привет, <span id="name-output">незнакомец</span>!</h1>
+
+    <!-- task-6 -->
+
+    <input
+      type="text"
+      id="validation-input"
+      data-length="6"
+      placeholder="Введи 6 символов"
+    />
+
+    <!-- task-7 -->
+
+    <input id="font-size-control" type="range" />
+    <br />
+    <span id="text">Абракадабра!</span>
+
+    <script src="./task-1.js" type="module"></script>
+    <script src="./task-2.js" type="module"></script>
+    <script src="./task-3.js" type="module"></script>
+    <script src="./task-4.js" type="module"></script>
+    <script src="./task-5.js" type="module"></script>
+    <script src="./task-6.js" type="module"></script>
+    <script src="./task-7.js" type="module"></script>
   </body>
 </html>
