--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <!-- task-1 -->
@@ -79,12 +79,23 @@
     <br />
     <span id="text">Абракадабра!</span>
 
-    <script src="./task-1.js" type="module"></script>
-    <script src="./task-2.js" type="module"></script>
-    <script src="./task-3.js" type="module"></script>
-    <script src="./task-4.js" type="module"></script>
-    <script src="./task-5.js" type="module"></script>
-    <script src="./task-6.js" type="module"></script>
-    <script src="./task-7.js" type="module"></script>
+    <!-- task-8 -->
+
+    <div id="controls">
+      <input type="number" min="0" max="100" step="1" />
+      <button type="button" data-action="render">Создать</button>
+      <button type="button" data-action="destroy">Очистить</button>
+    </div>
+
+    <div id="boxes"></div>
+
+    <script src="./js/task-1.js" type="module"></script>
+    <script src="./js/task-2.js" type="module"></script>
+    <script src="./js/task-3.js" type="module"></script>
+    <script src="./js/task-4.js" type="module"></script>
+    <script src="./js/task-5.js" type="module"></script>
+    <script src="./js/task-6.js" type="module"></script>
+    <script src="./js/task-7.js" type="module"></script>
+    <script src="./js/task-8.js" type="module"></script>
   </body>
 </html>
